--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "kassner/log-parser": "~1.0",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "league/flysystem-aws-s3-v3": "~1.0"
+        "league/flysystem-aws-s3-v3": "~1.0",
+        "maxmind-db/reader": "~1.0",
+        "ua-parser/uap-php": "^3.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
