--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,16 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
+
+AWS_KEY=
+AWS_SECRET=
+AWS_REGION=
+AWS_BUCKET=
+
+ACCESS_LOG=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -26,8 +33,3 @@ MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-
-AWS_KEY=
-AWS_SECRET=
-AWS_REGION=
-AWS_BUCKET=
